# projekt3

./: Dockerfile  Dockerfile1  conda_install.txt  docker-compose.yml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: namestitev.yaml  ovrednoti_v_produkciji.yaml  pripravi_podatke.yml  ucenje_ovrednotenje_modela.yml
data/processed/: .gitignore  current_data.csv  current_data.csv.dvc  prediction_errors1.csv  prediction_errors2.csv  prediction_metrics1.csv  prediction_metrics2.csv  reference_data.csv  reference_data.csv.dvc  reference_data1.csv  rift_test.html  stability_test.html  test_prod.csv  train_prod.csv
data/raw/: traffic_data.csv  traffic_incidents_data.csv  weather_data.csv
gx/: great_expectations.yml
gx/expectations/: .ge_store_backend_id  MojSuite.json
gx/uncommitted/data_docs/local_site/: index.html
gx/uncommitted/validations/: .ge_store_backend_id
models/: model1_scaler_pipeline1.pkl  model1_scaler_pipeline2.pkl  model2_scaler_pipeline.pkl  model2_scaler_pipeline1.pkl  model2_scaler_pipeline2.pkl
notebooks/: prediction_errors.csv  prediction_metrics.csv
notebooks/Projekt/: GreatExp.py  api.py  evi_script.py  grajenje_modela1.py  grajenje_modela2.py  izprazni.py  oceni_napovedi.py  oceni_napovedi1.py  oceni_napovedi2.py  ovrednotenje_modela1.py  ovrednotenje_modela2.py  pre_process.py  pridobi_nesrece.py  pridobi_vremenske_podatke.py  prodobi_prometne_podatke.py  train_test_split.py  ustvari_current.py
notebooks/UI/: app.js  package-lock.json  package.json
notebooks/UI/public/: index.html
(+1 files in other folders)
