[tool.poetry]
name = "projekt-master"
version = "0.1.0"
description = ""
authors = ["Benjamin <benjamin.petelinek@gmail.com>"]
readme = "README.md"
packages = [{include = "projekt_master"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
